// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a provided className to the component 1`] = `
<div>
  <input
    class="my-custom-classname input"
    data-testid="input"
  />
</div>
`;

exports[`renders an Input component 1`] = `
<div>
  <input
    class="input"
  />
</div>
`;
